--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxtjs/google-fonts": "^3.0.1",
     "@types/node": "^18",
     "autoprefixer": "^10.4.14",
-    "nuxt": "^3.4.3",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^9.11.0",
+    "nuxt": "^3.4.3",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "sass": "^1.62.1"
   }
 }
