--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "lodash": "^4.17.21",
     "sass": "^1.62.1",
     "typed.js": "^2.0.16"
   }
