--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "tailwindcss": "^3.3.2"
   },
   "dependencies": {
+    "@vueuse/core": "^10.1.2",
     "aos": "^2.3.4",
     "lodash": "^4.17.21",
     "sass": "^1.62.1",
